# QR_Shield-Mono

./: .gitignore  README.md  docker-compose.yml
apps/back/: .dockerignore  .env.example  README.md  pyproject.toml
apps/back/app/: __init__.py  main.py
apps/back/app/api/: router.py
apps/back/app/api/routes/: analyze.py
apps/back/app/clients/: llm_client.py
apps/back/app/core/: config.py
apps/back/app/models/: risk.py
apps/back/app/schemas/: analysis.py
apps/back/app/services/: llm_client.py  risk_engine.py  score_aggregator.py  url_parser.py
apps/back/tests/: test_analyze_api.py  test_risk_engine.py  test_score_aggregator.py
apps/front/: App.tsx  app.json  package-lock.json  package.json
apps/front/src/components/: RiskBadge.tsx
apps/front/src/navigation/: index.tsx
apps/front/src/screens/: HistoryScreen.tsx  ResultScreen.tsx  ScanScreen.tsx
apps/front/src/services/: api.ts
apps/front/src/store/: useStore.ts
apps/front/src/types/: index.ts
apps/front/src/utils/: riskConfig.ts  theme.ts
apps/llm/: .env.example  BACKEND_HANDOFF.md  TEAM_STATUS_LLM_ML.md  requirements.txt
apps/llm/app/: main.py
apps/llm/app/api/: explain_router.py
apps/llm/app/core/: config.py
apps/llm/app/ml/: model.py  redirect.py
apps/llm/app/prompts/: explain.py  safety.py
apps/llm/app/schemas/: __init__.py  explain.py  score.py
apps/llm/app/services/: explain_common.py  gemini_service.py  llm_explain.py  middle_score.py  solar_service.py  (+1 more)
apps/llm/tests/: test_middle_score.py  test_redirect_score.py  test_url_insights.py
docs/: STRUCTURE.md
